// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Button #render() should not modify mods 1`] = `
<div
  className="ui-radio ui-radio_test ui-radio_disabled"
>
  <input
    checked={false}
    className="ui-radio__input-radio"
    disabled={true}
    id="disabledRadio"
    onChange={[Function]}
    readOnly={false}
    type="radio"
  />
  <label
    aria-checked={false}
    className="ui-radio__label"
    htmlFor="disabledRadio"
    role="radio"
  >
    Disabled radio button
  </label>
</div>
`;

exports[`Radio Button #render() should render checked radio button 1`] = `
<div
  className="ui-radio"
>
  <input
    checked={true}
    className="ui-radio__input-radio"
    disabled={false}
    id="radio1"
    onChange={[Function]}
    readOnly={false}
    type="radio"
  />
  <label
    aria-checked={true}
    className="ui-radio__label"
    htmlFor="radio1"
    role="radio"
  >
    Radio 1
  </label>
</div>
`;

exports[`Radio Button #render() should render disabled radio button 1`] = `
<div
  className="ui-radio ui-radio_disabled"
>
  <input
    checked={false}
    className="ui-radio__input-radio"
    disabled={true}
    id="disabledRadio"
    onChange={[Function]}
    readOnly={false}
    type="radio"
  />
  <label
    aria-checked={false}
    className="ui-radio__label"
    htmlFor="disabledRadio"
    role="radio"
  >
    Disabled radio button
  </label>
</div>
`;

exports[`Radio Button #render() should render radio button 1`] = `
<div
  className="ui-radio"
>
  <input
    checked={false}
    className="ui-radio__input-radio"
    disabled={false}
    id="radio2"
    onChange={[Function]}
    readOnly={false}
    type="radio"
  />
  <label
    aria-checked={false}
    className="ui-radio__label"
    htmlFor="radio2"
    role="radio"
  >
    Radio 2
  </label>
</div>
`;

exports[`Radio Button #render() should render radio button with dataAttrs for input 1`] = `
<div
  className="ui-radio test-class"
>
  <input
    checked={false}
    className="ui-radio__input-radio"
    data-my-attr-for-input="some-attr-for-input"
    disabled={false}
    id="radio1"
    onChange={[Function]}
    readOnly={false}
    type="radio"
  />
  <label
    aria-checked={false}
    className="ui-radio__label"
    htmlFor="radio1"
    role="radio"
  >
    Radio 1
  </label>
</div>
`;

exports[`Radio Button #render() should render radio button with dataAttrs for label 1`] = `
<div
  className="ui-radio test-class"
>
  <input
    checked={false}
    className="ui-radio__input-radio"
    disabled={false}
    id="radio1"
    onChange={[Function]}
    readOnly={false}
    type="radio"
  />
  <label
    aria-checked={false}
    className="ui-radio__label"
    data-my-attr-for-label="some-attr-for-label"
    htmlFor="radio1"
    role="radio"
  >
    Radio 1
  </label>
</div>
`;

exports[`Radio Button #render() should render radio button with dataAttrs for root element 1`] = `
<div
  className="ui-radio test-class"
  data-my-attr="some-attr"
>
  <input
    checked={false}
    className="ui-radio__input-radio"
    disabled={false}
    id="radio1"
    onChange={[Function]}
    readOnly={false}
    type="radio"
  />
  <label
    aria-checked={false}
    className="ui-radio__label"
    htmlFor="radio1"
    role="radio"
  >
    Radio 1
  </label>
</div>
`;

exports[`Radio Button #render() should render radio button with provided className 1`] = `
<div
  className="ui-radio test-class"
>
  <input
    checked={false}
    className="ui-radio__input-radio"
    disabled={false}
    id="radio1"
    onChange={[Function]}
    readOnly={false}
    type="radio"
  />
  <label
    aria-checked={false}
    className="ui-radio__label"
    htmlFor="radio1"
    role="radio"
  >
    Radio 1
  </label>
</div>
`;
